# ConsoleSoftware

./: .gitattributes  .gitignore  License.md  Readme.md
Bios/: Readme.md
Bios/Bios-JumpWithCheck/: Bios-JumpWithCheck.asm  Bios-JumpWithCheck.xml  Make.bat  Make.sh  Readme.txt
Bios/BiosWithoutLogo/: BiosWithoutLogo.c  BiosWithoutLogo.xml  ErrorInfo.h  Make.bat  Make.sh  Readme.txt
Bios/StandardBios/: Make.bat  Make.sh  Readme.txt  StandardBios.c  StandardBios.xml
CStandardLibrary/: audio.h  input.h  math.h  memcard.h  misc.h  string.h  time.h  video.h
GameDemos/: Readme.md
GameDemos/Demo-Bricks/: Demo-Bricks.c  Demo-Bricks.xml  Make.bat  Make.sh  Music-Gameplay.mmpz  Readme.txt
GameDemos/Pseudo3DRacer/: Globals.c  Make.bat  Make.sh  Mountains.c  Pseudo3DRacer.c  Pseudo3DRacer.xml  Readme.txt  RoadObjects.c  TextureRoad.h  TextureRoad.xml
GameDemos/RPGConcept/: Character.h  Dialog.h  FontDialog.h  Globals.h  Make.bat  Make.sh  RPGConcept.c  RPGConcept.xml  Readme.txt  Scene.h  TextureRPG.h  TextureRPG.xml  collisionbox.h  tilemap.h
GameDemos/TripleBubble/: Bubble.h  Calculations.h  Character.h  Definitions.h  Globals.h  Launcher.h  Main.c  Make.bat  Make.sh  MakeAll.bat  MakeAll.sh  Playfield.h  Points.h  Readme.txt  SceneArcadeClassic.h  SceneArcadeTriple.h  SceneEnding.h  SceneGameOver.h  SceneMainMenu.h  SceneTitle.h  TextureRegions.h  (+2 more)
Games/: Readme.md
Games/Chip8Emulator/RomConverter/: CMakeLists.txt  Chip8ToVircon32.cpp  Readme.txt
Libraries/: Readme.md
TechnicalDemos/: Readme.md
TestPrograms/: Readme.txt
Tutorials/: Readme.md
(+886 files in other folders)
